--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/leave-request.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/leave-request.html
@@ -32,15 +32,21 @@ request-type: Leave
         <callout class="callout-no-padding">
           <div class="request-comments">
             {foreach from=$leaveComments item=value key=label}
-              <div class="request-comment">
-                <div class="request-comment-header">
-                  <span class="request-comment-author">{$value.commenter}:</span>
-                  <span class="request-comment-datetime">{$value.created_at|crmDate}</span>
-                </div>
-                <div class="request-comment-body">
-                  {$value.text}
-                </div>
-              </div>
+              <table class="request-comment">
+                <tbody>
+                  <tr>
+                    <td class="request-comment-header">
+                      <span class="request-comment-author">{$value.commenter}:</span>
+                      <span class="request-comment-datetime">{$value.created_at|crmDate}</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="request-comment-body">
+                      {$value.text}
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             {/foreach}
           </div>
         </callout>
