PCHR-2198: Use spacer between first callout and button

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/leave-request.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/leave-request.html
@@ -25,6 +25,7 @@ request-type: Leave
           {/if}
         </dl>
       </callout>
+      <spacer></spacer>
       <button href="{$leaveRequestLink}" class="expanded alert">View This Request</button>
       {if $leaveComments}
         <hr>
