--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/leave-request.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/leave-request.html
@@ -9,21 +9,47 @@ request-type: Leave
     <columns>
       {{> callout-header title="Leave Request Type"}}
       <callout class="request-data">
-        <dl>
-          <dt>{ts}Status:{/ts}</dt>
-          <dd>{$leaveStatus}</dd>
-          <dt>{ts}Staff Member:{/ts}</dt>
-          <dd>{contact.display_name}</dd>
-          {if $leaveRequest->from_date eq $leaveRequest->to_date}
-            <dt>Date:</dt>
-            <dd>{$fromDate|truncate:10:\'\'|crmDate} {$fromDateType}</dd>
-          {else}
-            <dt>{ts}From Date:{/ts}</dt>
-            <dd>{$fromDate|truncate:10:\'\'|crmDate} {$fromDateType}</dd>
-            <dt>{ts}To Date:{/ts}</dt>
-            <dd>{$toDate|truncate:10:\'\'|crmDate} {$toDateType}</dd>
-          {/if}
-        </dl>
+        <row>
+          <columns class="request-data-key" large="3">
+            <span>{ts}Status:{/ts}</span>
+          </columns>
+          <columns class="request-data-value">
+            <span>{$leaveStatus}</span>
+          </columns>
+        </row>
+        <row>
+          <columns class="request-data-key" large="3">
+            <span>{ts}Staff Member:{/ts}</span>
+          </columns>
+          <columns class="request-data-value">
+            <span>{contact.display_name}</span>
+          </columns>
+        </row>
+        {if $leaveRequest->from_date eq $leaveRequest->to_date}
+          <row>
+            <columns class="request-data-key" large="3">
+              <span>Date:</span>
+            </columns>
+            <columns class="request-data-value">
+              <span>{$fromDate|truncate:10:\'\'|crmDate} {$fromDateType}</span>
+            </columns>
+          </row>
+        {else}
+          <row>
+            <columns class="request-data-key" large="3">
+              <span>{ts}From Date:{/ts}</span>
+            </columns>
+            <columns class="request-data-value">
+              <span>{$fromDate|truncate:10:\'\'|crmDate} {$fromDateType}</span>
+            </columns>
+            <columns class="request-data-key" large="3">
+              <span>{ts}To Date:{/ts}</span>
+            </columns>
+            <columns class="request-data-value">
+              <span>{$toDate|truncate:10:\'\'|crmDate} {$toDateType}</span>
+            </columns>
+          </row>
+        {/if}
       </callout>
       <spacer></spacer>
       <button href="{$leaveRequestLink}" class="expanded alert">View This Request</button>
