PCHR-2198: Fix wrong request data layout

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/toil-request.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/toil-request.html
@@ -42,6 +42,8 @@ request-type: TOIL
             <columns class="request-data-value">
               <span>{$fromDate|truncate:10:\'\'|crmDate} {$fromDateType}</span>
             </columns>
+          </row>
+          <row>
             <columns class="request-data-key" large="3">
               <span>{ts}To Date:{/ts}</span>
             </columns>
