--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/toil-request.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/toil-request.html
@@ -9,58 +9,23 @@ request-type: TOIL
     <columns>
       {{> callout-header title="Leave Request Type"}}
       <callout class="request-data">
-        <row>
-          <columns class="request-data-key" large="4">
-            <span>{ts}Status:{/ts}</span>
-          </columns>
-          <columns class="request-data-value">
-            <span>{$leaveStatus}</span>
-          </columns>
-        </row>
-        <row>
-          <columns class="request-data-key" large="4">
-            <span>{ts}Staff Member:{/ts}</span>
-          </columns>
-          <columns class="request-data-value">
-            <span>{contact.display_name}</span>
-          </columns>
-        </row>
+        {{> request-data key="Status" value="{$leaveStatus}" keySize="4"}}
+        {{> request-data key="Staff Member" value="{contact.display_name}" keySize="4"}}
+
         {if $leaveRequest->from_date eq $leaveRequest->to_date}
-          <row>
-            <columns class="request-data-key" large="4">
-              <span>Date:</span>
-            </columns>
-            <columns class="request-data-value">
-              <span>{$fromDate|truncate:10:\'\'|crmDate} {$fromDateType}</span>
-            </columns>
-          </row>
+          {{> request-data key="Date" value="{$fromDate|truncate:10:\'\'|crmDate} {$fromDateType}" keySize="4"}}
         {else}
-          <row>
-            <columns class="request-data-key" large="4">
-              <span>{ts}From Date:{/ts}</span>
-            </columns>
-            <columns class="request-data-value">
-              <span>{$fromDate|truncate:10:\'\'|crmDate} {$fromDateType}</span>
-            </columns>
-          </row>
-          <row>
-            <columns class="request-data-key" large="4">
-              <span>{ts}To Date:{/ts}</span>
-            </columns>
-            <columns class="request-data-value">
-              <span>{$toDate|truncate:10:\'\'|crmDate} {$toDateType}</span>
-            </columns>
-          </row>
+          {{> request-data key="From Date" value="{$fromDate|truncate:10:\'\'|crmDate} {$fromDateType}" keySize="4"}}
+          {{> request-data key="To Date" value="{$toDate|truncate:10:\'\'|crmDate} {$toDateType}" keySize="4"}}
         {/if}
-        <row class="request-data-toil">
-          <columns class="request-data-key" large="4">
-            <!-- div is necessary because of Outlook's rendering problems -->
-            <div>{ts}No. TOIL Days Requested:{/ts}</div>
-          </columns>
-          <columns class="request-data-value">
-            <span>{$leaveRequest->toil_to_accrue}{if $leaveRequest->toil_to_accrue > 1}days{else}day{/if}</span>
-          </columns>
-        </row>
+
+        {{> request-data
+          key="No. TOIL Days Requested"
+          value="{$leaveRequest->toil_to_accrue} {if $leaveRequest->toil_to_accrue > 1}days{else}day{/if}"
+          class="request-data-toil"
+          keySize="4"
+          keyTag="div"
+        }}
       </callout>
       <spacer></spacer>
       <button href="{$leaveRequestLink}" class="expanded alert">View This Request</button>
