PCHR-2198: Add L&A email footer + small fixes

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/leave-request.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/leave-request.html
@@ -45,10 +45,5 @@ request-type: Leave
       {/if}
     </columns>
   </row>
-  <row class="collapse">
-    <columns>
-      <spacer></spacer>
-      <img class="text-center email-logo" src="https://civihr.org/sites/default/files/email-logo.png">
-    </columns>
-  </row>
+  {{> la-footer}}
 </div>
