--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/toil-request.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/toil-request.html
@@ -53,10 +53,5 @@ request-type: TOIL
       {/if}
     </columns>
   </row>
-  <row class="collapse">
-    <columns>
-      <spacer></spacer>
-      <img class="text-center email-logo" src="https://civihr.org/sites/default/files/email-logo.png">
-    </columns>
-  </row>
+  {{> la-footer}}
 </div>
