PCHR-2199: Use the sickness reason label in the email template

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/sickness-request.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/sickness-request.html
@@ -20,8 +20,8 @@ request-type: Sickness
         {/if}
         <hr>
         {{> request-data key="Additional Details" value=""}}
-        {{> request-data key="The Reason" value="{$sicknessReasons[$leaveRequest->sickness_reason]}"}}
-        {if $leaveRequiredDocuments}Documents:
+        {{> request-data key="The Reason" value="{$sicknessReason}"}}
+        {if $leaveRequiredDocuments}
           <div class="request-documents">
             {foreach from=$sicknessRequiredDocuments item=value key=id}
               <div class="request-document">
