PCHR-2560: Add default footer, update system invite text

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/drupal-system-invite.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/drupal-system-invite.html
@@ -1,7 +1,6 @@
 ---
 layout: civihr-default
 title: Please sign in to CiviHR
-description:
 ---
 
 <div class="request">
@@ -9,14 +8,12 @@ description:
     <columns>
       {{> callout-header title="Invitation to CiviHR"}}
       <callout class="invitataion-content">
-        A request to reset the password for your account has been made at {$siteName}.
-
-        You may now log in by clicking this link.
+        Your CiviHR account has been activated.
       </callout>
       <spacer></spacer>
       <button href="{$invitationLink}" class="expanded alert">Log In</button>
 
     </columns>
   </row>
-  {{> la-footer}}
+  {{> default-footer}}
 </div>
