PCHR-2560: Update templates to include header, current date, and other formatting changes

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/drupal-account-activated.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/drupal-account-activated.html
@@ -1,16 +1,21 @@
 ---
 layout: default
 subject:  Welcome to CiviHR!
+title:  Welcome to CiviHR!
 ---
 
-<container>
-  <row>
-    <columns bgcolor="#ffffff">
-      {$body}
+<div class="request">
+  <row class="collapse">
+    <columns>
+      {{> callout-header title="Please create a password" }}
+      <callout class="request-data">
+        {$body}
+      </callout>
+      <spacer></spacer>
       <button href="{$invitationLink}" class="expanded alert end">
         Log In
       </button>
     </columns>
   </row>
   {{> default-footer}}
-</container>
+</div>
