--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/drupal-password-reset.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/pages/drupal-password-reset.html
@@ -1,16 +1,21 @@
 ---
 layout: default
+title: "CiviHR: Password Reset"
 subject:  Password Reset
 ---
 
-<container>
-  <row>
-    <columns bgcolor="#ffffff">
-      {$body}
+<div class="request">
+  <row class="collapse">
+    <columns>
+      {{> callout-header title="Follow these instructions to reset your password" }}
+      <callout class="request-data">
+        {$body}
+      </callout>
+      <spacer></spacer>
       <button href="{$resetLink}" class="expanded alert end">
         Reset Password
       </button>
     </columns>
   </row>
   {{> default-footer}}
-</container>
+</div>
